[UPDATE] adjust general name to fileStorageCore, adjust storage path name, adjust api path
