# Sources/GoogleCloudStorage/Adapter/ApiHandler.swift
@@ -1,21 +1,21 @@
 import Foundation
+import FileStorageCore
 
 
 package struct ApiHandler: APIProtocol {
 
-    let uploader: Uploader
+    let uploader: UploaderProtocol
     
-    package init(uploader: Uploader) {
+    package init(uploader: UploaderProtocol) {
         self.uploader = uploader
     }
     
-    package func upload(_ input: Operations.upload.Input) async throws -> Operations.upload.Output {
+    package func uploadFromQuotingContext(_ input: Operations.uploadFromQuotingContext.Input) async throws -> Operations.uploadFromQuotingContext.Output {
+        let quotingCaseId = input.path.quotingCaseId
         let fileContentType = input.headers.fileContentType.wrapped.fileContentType
         let ext = input.headers.fileContentType.wrapped.ext
         
         var fileData: Data?
-        var customerId: String?
-        var documentType: DocumentType?
         switch input.body {
         case let .multipartForm(multipartBody):
             for try await part in multipartBody {
@@ -24,9 +24,6 @@ package struct ApiHandler: APIProtocol {
                     fileData = try await filePayload.payload.body.reduce(into: Data()) { partialResult, byteChunk in
                         partialResult.append(contentsOf: byteChunk.map(\.self))
                     }
-                case let .meta(metaPayload):
-                    customerId = metaPayload.payload.body.customerId
-                    documentType = DocumentType(rawValue: metaPayload.payload.body.documentType.rawValue)
                 case .undocumented(_):
                     continue
                 }
@@ -35,44 +32,88 @@ package struct ApiHandler: APIProtocol {
         guard let fileData else {
             throw UploadError.fileDataIsNil
         }
-        guard let customerId else {
-            throw UploadError.customerIdIsNil
-        }
-        guard let documentType else {
-            throw UploadError.documentTypeIsNil
-        }
+
         let documentId = UUID().uuidString
         var mediaLink: String?
         do {
-            let filePath = getFilePath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
+            let filePath = StoragePathGenerator.generateQuotingContextPath(quotingCaseId: quotingCaseId, documentId: documentId, ext: ext)
             mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: fileContentType, limit: .mb(10))
         } catch {
             return .serviceUnavailable(.init(body: .json(.init(stringLiteral: "\(error)"))))
         }
         return .ok(.init(body: .json(.init(documentId: documentId, mediaLink: mediaLink))))
     }
-}
-
-extension ApiHandler {
     
-    func getFilePath(customerId: String, documentType: DocumentType, documentId: String, ext: String) -> String {
-        switch documentType {
-        case .ProfitseekingEnterpriseAnnualIncomeTaxReturnDocument:
-            return StoragePathGenerator.generateAuditContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
-        case .BusinessTaxReturnDocument:
-            return StoragePathGenerator.generateAuditContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
-        case .BusinessClientRiskControlDocument:
-            return StoragePathGenerator.generateAuditContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
-        case .FinancialComplianceAuditDocument:
-            return StoragePathGenerator.generateAuditContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
-        case .TaxComplianceAuditDocument:
-            return StoragePathGenerator.generateAuditContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
-        case .QuotingProof:
-            return StoragePathGenerator.generateQuotingContextPath(customerId: customerId, documentId: documentId, ext: ext)
-        case .ReplyForm:
-            return StoragePathGenerator.generateQuotingContextPath(customerId: customerId, documentId: documentId, ext: ext)
-        case .NewBusinessClientRiskControlDocument:
-            return StoragePathGenerator.generateQuotingContextPath(customerId: customerId, documentId: documentId, ext: ext)
+    package func uploadFromCustomerRelationshipContext(_ input: Operations.uploadFromCustomerRelationshipContext.Input) async throws -> Operations.uploadFromCustomerRelationshipContext.Output {
+        let customerId = input.path.customerId
+        let fileContentType = input.headers.fileContentType.wrapped.fileContentType
+        let ext = input.headers.fileContentType.wrapped.ext
+        
+        var fileData: Data?
+        switch input.body {
+        case let .multipartForm(multipartBody):
+            for try await part in multipartBody {
+                switch part {
+                case let .file(filePayload):
+                    fileData = try await filePayload.payload.body.reduce(into: Data()) { partialResult, byteChunk in
+                        partialResult.append(contentsOf: byteChunk.map(\.self))
+                    }
+                case .undocumented(_):
+                    continue
+                }
+            }
         }
+        guard let fileData else {
+            throw UploadError.fileDataIsNil
+        }
+        guard let documentType = DocumentType(rawValue: input.path.customerRelationshipContextDocumentType.rawValue) else {
+            throw UploadError.documentTypeIsInValid(value: input.path.customerRelationshipContextDocumentType.rawValue)
+        }
+        
+        let documentId = UUID().uuidString
+        var mediaLink: String?
+        do {
+            let filePath = StoragePathGenerator.generateCustomerRelationshipContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
+            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: fileContentType, limit: .mb(10))
+        } catch {
+            return .serviceUnavailable(.init(body: .json(.init(stringLiteral: "\(error)"))))
+        }
+        return .ok(.init(body: .json(.init(documentId: documentId, mediaLink: mediaLink))))
+    }
+    
+    package func uploadFromAuditContext(_ input: Operations.uploadFromAuditContext.Input) async throws -> Operations.uploadFromAuditContext.Output {
+        let customerId = input.path.customerId
+        let fileContentType = input.headers.fileContentType.wrapped.fileContentType
+        let ext = input.headers.fileContentType.wrapped.ext
+        
+        var fileData: Data?
+        switch input.body {
+        case let .multipartForm(multipartBody):
+            for try await part in multipartBody {
+                switch part {
+                case let .file(filePayload):
+                    fileData = try await filePayload.payload.body.reduce(into: Data()) { partialResult, byteChunk in
+                        partialResult.append(contentsOf: byteChunk.map(\.self))
+                    }
+                case .undocumented(_):
+                    continue
+                }
+            }
+        }
+        guard let fileData else {
+            throw UploadError.fileDataIsNil
+        }
+        guard let documentType = DocumentType(rawValue: input.path.auditContextDocumentType.rawValue) else {
+            throw UploadError.documentTypeIsInValid(value: input.path.auditContextDocumentType.rawValue)
+        }
+        let documentId = UUID().uuidString
+        var mediaLink: String?
+        do {
+            let filePath = StoragePathGenerator.generateAuditContextPath(customerId: customerId, documentType: documentType, documentId: documentId, ext: ext)
+            mediaLink = try await self.uploader.upload(data: fileData, path: filePath, contentType: fileContentType, limit: .mb(10))
+        } catch {
+            return .serviceUnavailable(.init(body: .json(.init(stringLiteral: "\(error)"))))
+        }
+        return .ok(.init(body: .json(.init(documentId: documentId, mediaLink: mediaLink))))
     }
 }
