# Sources/GoogleCloudStorage/Configuration/DocumentType.swift
@@ -1,18 +1,0 @@
-package enum DocumentType: String {
-    /// 結算申報書
-    case ProfitseekingEnterpriseAnnualIncomeTaxReturnDocument = "ProfitseekingEnterpriseAnnualIncomeTaxReturnDocument"
-    /// 401
-    case BusinessTaxReturnDocument = "BusinessTaxReturnDocument"
-    /// 所客風控表
-    case BusinessClientRiskControlDocument = "BusinessClientRiskControlDocument"
-    /// 財簽
-    case FinancialComplianceAuditDocument = "FinancialComplianceAuditDocument"
-    /// 稅簽
-    case TaxComplianceAuditDocument = "TaxComplianceAuditDocument"
-    /// 報價依據
-    case QuotingProof = "QuotingProof"
-    /// 同意函
-    case ReplyForm = "ReplyForm"
-    /// 新客風控表
-    case NewBusinessClientRiskControlDocument = "NewBusinessClientRiskControlDocument"
-}
